Added misc to filter, markers to icons, saved spots working in detailed page

--- a/skatehub/src/pages/filter/filter.html
+++ b/skatehub/src/pages/filter/filter.html
@@ -31,6 +31,10 @@
           <ion-label>DIY</ion-label>
           <ion-checkbox item-end [(ngModel)] = "diy" (ionChange) = "addToFilterArray('diy', diy)"></ion-checkbox>
         </ion-item>
+        <ion-item>
+        <ion-label>Misc</ion-label>
+        <ion-checkbox item-end [(ngModel)] = "misc" (ionChange) = "addToFilterArray('misc', misc)"></ion-checkbox>
+      </ion-item>
         <!-- <ion-item>
           <ion-label>Misc</ion-label>
           <ion-checkbox item-end [(ngModel)] = "misc" (ionChange) = "addToFilterArray('misc', misc)"></ion-checkbox>
