--- a/skatehub/src/pages/home/home.html
+++ b/skatehub/src/pages/home/home.html
@@ -59,7 +59,7 @@
             <h3><strong>{{spot.username}}</strong></h3>
             <ion-buttons item-end (tap) = "openDetailedAction(spot)">
               <button ion-button clear icon-only>
-                <ion-icon name="more" color="black"></ion-icon>
+                <ion-icon name="ios-more" color="black"></ion-icon>
               </button>
             </ion-buttons>
           </ion-item>
