--- a/skatehub/src/pages/home/home.html
+++ b/skatehub/src/pages/home/home.html
@@ -115,8 +115,8 @@
 			 to the profile.
            -->
 		   <button ion-item no-lines (click)="avatarClick(spot)">
-		     <h3>{{spot.username}}</h3>
-			 <p>{{spot.description}}</p> 
+		     <h3>{{spot.name}}</h3>
+			 <p text-wrap>{{spot.description}}</p> 
 		   </button>   
 		</ion-col>
 	  </ion-row>
