--- a/skatehub/src/pages/comments/comments.html
+++ b/skatehub/src/pages/comments/comments.html
@@ -17,7 +17,7 @@
   <ion-list *ngIf="commentsArr">
 		  <ion-item *ngFor="let comment of commentsArr">
 				  <h3>{{comment.username}}</h3>
-				  <p>{{comment.comment}}</p>
+				  <p text-wrap>{{comment.comment}}</p>
 		  </ion-item>
   </ion-list>
 </ion-content>
