--- a/skatehub/src/pages/profile/profile.html
+++ b/skatehub/src/pages/profile/profile.html
@@ -82,7 +82,7 @@
     </ion-col>
   </ion-row>
   <ion-row style="background-color#628" class="ion-row">
-    <ion-col col-6 style="background-color: #ffffff" (tap)= "invitesPage()" class="grid-border" class="ion-left-col"> Invites
+    <ion-col col-6 style="background-color: #ffffff" (tap)= "invitesPage()" class="grid-border" class="ion-left-col"> Sessions
       <p> </p>
       <ion-icon name = "paper-plane" class="icons"></ion-icon>
     </ion-col>
