--- a/skatehub/src/pages/friends/friends.html
+++ b/skatehub/src/pages/friends/friends.html
@@ -34,12 +34,12 @@
           </ion-avatar>
           <h2>{{friend.username}}</h2>
         </ion-item>
-        <ion-item-options side="left">
+        <!-- <ion-item-options side="left">
           <button ion-button color="danger">
             <ion-icon name="trash"></ion-icon>
             Delete
           </button>
-        </ion-item-options>
+        </ion-item-options> -->
       </ion-item-sliding>
 
     </ion-list>
