--- a/skatehub/src/pages/detailed-user/detailed-user.html
+++ b/skatehub/src/pages/detailed-user/detailed-user.html
@@ -27,8 +27,6 @@ Should be changed to be colorful and nice.
         <ion-avatar *ngIf="user" class= "profile-shift">
           <img [src]="user.avatar" class = "avatar-border">
         </ion-avatar>
-        <!-- <ion-icon name="create" mode="android" ios="md-create" style="font-size: 25px; position: relative; color: #ffffff;"></ion-icon> -->
-        <!-- <ion-icon name="remove-circle" color="danger" style="font-size: 30px;"></ion-icon> -->
     </ion-row>
       <h4 *ngIf="user" no-margin text-center ion-text color = "white" style = "position: relative;">{{user.username}}</h4>
       <p *ngIf="user && (user.stance)" text-center ion-text color = "white" no-margin style = "position: relative;"> Stance: {{user.stance}} </p>
@@ -37,12 +35,14 @@ Should be changed to be colorful and nice.
       <!-- Add friend and Invite user button -->
       <!-- <ion-badge item-end (tap)="addFriend()"  class="addFriend">Add Friend :o</ion-badge> -->
       <!-- <ion-badge item-end (tap)="sendInvite()" class="sendInvite">Send invite </ion-badge> -->
-      <ion-badge *ngIf="!hasRequested" item-end (tap)= "addFriend()" class="addFriendClass"> <ion-icon name = "person-add" class ="badgeIcons"> </ion-icon> </ion-badge>
-      <ion-badge *ngIf="hasRequested" item-end class="addFriendClass"> <ion-icon name = "clock" class ="badgeIcons"> </ion-icon> </ion-badge>
+      <ion-badge *ngIf="!hasRequested && !isFriends && !theyRequested" item-end (tap)= "addFriend()" class="addFriendClass"> <ion-icon name = "person-add" class ="badgeIcons"> </ion-icon> </ion-badge>
+      <ion-badge *ngIf="hasRequested && !isFriends && !theyRequested" item-end class="addFriendClass"> <ion-icon name = "clock" class ="badgeIcons"> </ion-icon> </ion-badge>
+      <ion-badge *ngIf="isFriends" item-end class="addFriendClass"> Unfriend (Doesn't work) </ion-badge>
+      <ion-badge *ngIf="theyRequested" item-end class="addFriendClass"> Accept Request (Doesn't work) </ion-badge>
 
 
-      <ion-badge item-end (tap)= "sendInvite()" class="sendInviteClass"> <ion-icon name = "paper-plane" class="badgeIcons"> </ion-icon> </ion-badge>
-      <ion-badge item-end (tap)= "sendMessage()" class="sendMessageClass"> <ion-icon id = "bubbles" name="ios-chatbubbles" class="badgeIcons"> </ion-icon> </ion-badge>
+      <!-- <ion-badge item-end (tap)= "sendInvite()" class="sendInviteClass"> <ion-icon name = "paper-plane" class="badgeIcons"> </ion-icon> </ion-badge> -->
+      <!-- <ion-badge item-end (tap)= "sendMessage()" class="sendMessageClass"> <ion-icon id = "bubbles" name="ios-chatbubbles" class="badgeIcons"> </ion-icon> </ion-badge> -->
       <!-- End friend/user button -->
 
       <ion-grid style="background-color: #FFF" class="ion-grid">
@@ -57,14 +57,14 @@ Should be changed to be colorful and nice.
           </ion-col>
         </ion-row>
         <ion-row style="background-color#628" class="ion-row">
-          <ion-col col-6 style="background-color: #ffffff" class="grid-border" class="ion-left-col"> Bio
+          <!-- <ion-col col-6 style="background-color: #ffffff" class="grid-border" class="ion-left-col"> Bio
             <p> </p>
             <ion-icon name = "person" class="icons"></ion-icon>
           </ion-col>
           <ion-col col-6 style="background-color: #ffffff" class="grid-border"> Pictures
             <p> </p>
             <ion-icon name = "image" class="icons"></ion-icon>
-          </ion-col>
+          </ion-col> -->
         </ion-row>
       </ion-grid>
     </ion-content>
