--- a/skatehub/src/pages/other-user-spots/other-user-spots.html
+++ b/skatehub/src/pages/other-user-spots/other-user-spots.html
@@ -1,20 +1,55 @@
 <!--
-  Generated template for the OtherUserSpotsPage page.
+  Generated template for the MySpotsPage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title *ngIf="user">{{user.username}}'s spots</ion-title>
-  </ion-navbar>
+<ion-navbar>
+  <ion-segment mode="md" [(ngModel)]="categories" color="iosDarkBlue">
+    <ion-segment-button text-wrap value="postedSpots">
+      Posted Spots
+    </ion-segment-button>
+    <ion-segment-button text-wrap value="savedSpots">
+      Saved Spots
+    </ion-segment-button>
+  </ion-segment>
+</ion-navbar>
 
 </ion-header>
 
+<ion-content>
+<!-- full configured so that you can pull all the information for the spot. -->
+<!-- Look at the homepage for inspiration.-->
 
-<ion-content padding>
-  <ion-list *ngIf="spotsArr">
-    <ion-item *ngFor="let spot of spotsArr">{{spot.name}}</ion-item>
-  </ion-list>
+<div [ngSwitch]="categories">
+    <ion-list *ngSwitchCase="'postedSpots'">
+      <ion-item *ngFor="let spot of spotsArr">
+        <ion-thumbnail item-start>
+          <img [src]="spot.images[0]">
+          </ion-thumbnail>
+          <h2 text-wrap>{{spot.name}}</h2>
+          <ion-buttons item-end (tap) = "openDetailedSpot(spot)">
+            <button ion-button clear icon-only>
+              View
+            </button>
+          </ion-buttons>
+      </ion-item>
+    </ion-list>
+
+    <ion-list *ngSwitchCase="'savedSpots'">
+      <ion-item *ngFor="let spot of savedSpotsArr">
+          <ion-thumbnail item-start>
+            <img [src]="spot.images[0]">
+            </ion-thumbnail>
+            <h2 text-wrap>{{spot.name}}</h2>
+            <ion-buttons item-end (tap) = "openDetailedSpot(spot)">
+              <button ion-button clear icon-only>
+                View
+              </button>
+            </ion-buttons>
+      </ion-item>
+    </ion-list>
+  </div>
 </ion-content>
