"Minor changes to my-spots"

--- a/skatehub/src/pages/my-spots/my-spots.html
+++ b/skatehub/src/pages/my-spots/my-spots.html
@@ -19,7 +19,7 @@
 
 </ion-header>
 
-<ion-content padding>
+<ion-content (swipe)="swipeEvent($event)" padding>
 <!-- full configured so that you can pull all the information for the spot. -->
 <!-- Look at the homepage for inspiration.-->
 <ion-list>
