"Signed some comments"

--- a/skatehub/src/pages/profile/profile.html
+++ b/skatehub/src/pages/profile/profile.html
@@ -37,7 +37,7 @@
 
 
 <!-- User avatar and info - END -->
-
+<!-- I made thi stuff a long time ago, it can probably be removed ==TJ -->
 <!-- Bunch of buttons - START -->
   <!-- <button class = "top-spacing-buttons" ion-button icon-left block strong (tap) = "mySpotsPage()" color = "grey"> -->
     <!-- <ion-icon name = "archive"></ion-icon> -->
