--- a/skatehub/src/pages/search/search.html
+++ b/skatehub/src/pages/search/search.html
@@ -14,7 +14,7 @@
 </ion-header>
 <!-- Header end -->
 
-<ion-content class="searchBackGround">
+<ion-content>
   <!-- User list if searchTerm matches - START -->
   <ion-list *ngIf="!start && userResultArr.length > 0 && !hideSearch">
     <ion-list-header class="searchListHeader">People</ion-list-header>
