--- a/skatehub/src/pages/home/home.html
+++ b/skatehub/src/pages/home/home.html
@@ -58,7 +58,7 @@
 
       <ion-slides pager>
         <ion-slide *ngFor="let img of spot.images">
-          <img [src]="spot.images[0]" style="max-height: 450px; width: 100%;">
+          <img [src]="img" style="max-height: 450px; width: 100%;">
         </ion-slide>
       </ion-slides>
 
