--- a/skatehub/src/pages/profile/profile.html
+++ b/skatehub/src/pages/profile/profile.html
@@ -44,19 +44,26 @@
   </ion-row>
   <div [ngSwitch]="categories" style="height: 100%;">
     <ion-grid style="background-color: #f0f0f0; height: 100%;" *ngSwitchCase="'posts'">
-      <ion-row *ngIf="spots">
-        <ion-item id="username" style="background: transparent;" no-lines>
-            <span ion-text style="font-size: .75em; color: #9E9E9E;" (tap)="openSortAS()">
-              <strong>SORT POSTS</strong>
-            </span>
-            <ion-icon style="vertical-align: middle; color: #9E9E9E;" name="md-arrow-dropdown" mode="md"></ion-icon>
-        </ion-item>
+      <ion-item id="username" style="background: transparent;" no-lines>
+          <span ion-text style="font-size: .75em; color: #9E9E9E;" (tap)="openSortAS()">
+            <strong>{{sortText}}</strong>
+          </span>
+          <ion-icon style="vertical-align: middle; color: #9E9E9E;" name="md-arrow-dropdown" mode="md"></ion-icon>
+      </ion-item>
+      <ion-row *ngIf="spots && sort">
           <ion-col *ngFor="let spot of spots" col-4 col-md-3 col-lg-6 col-xl-12>
             <ion-thumbnail>
               <img [src]="spot.images[0]">
             </ion-thumbnail>
           </ion-col>
-        </ion-row>
+      </ion-row>
+      <ion-row *ngIf="savedSpots && !sort">
+          <ion-col *ngFor="let spot of savedSpots" col-4 col-md-3 col-lg-6 col-xl-12>
+            <ion-thumbnail>
+              <img [src]="spot.images[0]">
+            </ion-thumbnail>
+          </ion-col>
+      </ion-row>
     </ion-grid>
   </div>
 
