--- a/skatehub/src/pages/profile/profile.html
+++ b/skatehub/src/pages/profile/profile.html
@@ -78,9 +78,9 @@
 
 
   <!-- <div class ="square-background">
-  </div>
+  </div> !-->
 
-  <ion-row justify-content-center class="top-spacing">
+  <!-- <ion-row justify-content-center class="top-spacing">
       <ion-avatar *ngIf="user" class= "profile-shift">
         <img [src]="imagePath" class = "avatar-border">
       </ion-avatar>
@@ -101,7 +101,7 @@
     <h4 *ngIf="user" no-margin text-center ion-text color = "white" style = "position: relative;">{{user.username}}</h4>
     <p *ngIf="user && (user.stance)" text-center ion-text color = "white" (tap)= "changeStance()" no-margin style = "position: relative;"> Stance: {{user.stance}} </p>
     <p *ngIf="user && (user.stance == '' || !user.stance)" text-center ion-text color = "white" (tap)= "changeStance()" no-margin style = "position: relative;"> Set stance! </p>
-
+ -->
 
 <!-- User avatar and info - END -->
 <!-- I made thi stuff a long time ago, it can probably be removed ==TJ -->
@@ -137,7 +137,7 @@
   <!-- </button> -->
   <!-- Logout button - END -->
 
-<ion-grid style="background-color: #FFF" class="ion-grid">
+<!-- <ion-grid style="background-color: #FFF" class="ion-grid">
   <ion-row style="backround-color: #628" class="ion-top-row">
     <ion-col col-6 style="background-color: #ffffff" (tap)= "mySpotsPage()" class="grid-border" class="ion-left-col"> My Spots
       <p> </p>
@@ -159,7 +159,7 @@
     </ion-col>
   </ion-row>
 </ion-grid>
- -->
 
 
-</ion-content>
+
+</ion-content> -->
