--- a/skatehub/src/pages/profile/profile.html
+++ b/skatehub/src/pages/profile/profile.html
@@ -3,7 +3,7 @@
   <div class ="square-background">
   </div>
   <ion-row class="top-spacing">
-    <ion-buttons id="edit" (tap) = "openEditModal()">
+    <ion-buttons id="edit" (tap) = "settingsPage()">
       <button style="font-size: .82em" ion-button clear color="secondary">
         <strong>EDIT</strong>
       </button>
@@ -48,18 +48,19 @@
           <span ion-text style="font-size: .75em; color: #9E9E9E;" (tap)="openSortAS()">
             <strong>{{sortText}}</strong>
           </span>
-          <ion-icon style="vertical-align: middle; color: #9E9E9E;" name="md-arrow-dropdown" mode="md"></ion-icon>
+          <ion-icon style="vertical-align: middle; color: #9E9E9E;"
+          name="md-arrow-dropdown" mode="md" (tap)="openSortAS()"></ion-icon>
       </ion-item>
       <ion-row *ngIf="spots && sort">
           <ion-col *ngFor="let spot of spots" col-4 col-md-3 col-lg-6 col-xl-12>
-            <ion-thumbnail>
+            <ion-thumbnail (tap)="openDetailedSpot(spot);">
               <img [src]="spot.images[0]">
             </ion-thumbnail>
           </ion-col>
       </ion-row>
       <ion-row *ngIf="savedSpots && !sort">
           <ion-col *ngFor="let spot of savedSpots" col-4 col-md-3 col-lg-6 col-xl-12>
-            <ion-thumbnail>
+            <ion-thumbnail (tap)="openDetailedSpot(spot);">
               <img [src]="spot.images[0]">
             </ion-thumbnail>
           </ion-col>
