Fixed users appearing twice when sending messages, issue #124

--- a/skatehub/src/pages/message/message.html
+++ b/skatehub/src/pages/message/message.html
@@ -41,7 +41,10 @@
     </ion-item>
   </ion-list>
 
-  <ion-list>
+  <ion-list *ngIf="userResultArr.length > 0">
+    <ion-list-header>
+      Search Results
+    </ion-list-header>
     <ion-item *ngFor="let searchUser of userResultArr" (tap)="toggleUser(searchUser)">
       <ion-avatar item-start>
         <img [src]="searchUser.avatar">
