--- a/skatehub/src/pages/inbox/inbox.html
+++ b/skatehub/src/pages/inbox/inbox.html
@@ -11,7 +11,7 @@
         <ion-icon class = "fs-16" name="arrow-down"></ion-icon>
       </button>
     </ion-buttons> -->
-    <ion-title>Messsages</ion-title>
+    <ion-title>Messages</ion-title>
     <!-- <ion-buttons end right>
       <button clear id = "paper" color="black" ion-button icon-only>
         <ion-icon name="paper-plane"></ion-icon>
